tera/src/snapshot_tests/snapshots/tera__snapshot_tests__parser__parser_errors@for_loop_reserved_value.txt.snap
---
source: tera/src/snapshot_tests/parser.rs
expression: res.unwrap_err()
input_file: tera/src/snapshot_tests/parser_inputs/errors/for_loop_reserved_value.txt
---
error: loop is a reserved keyword of Tera, it cannot be used as a loop variable.
 --> for_loop_reserved_value.txt:1:7
  |
1 | {% for loop in items %}{{ loop.index }}{% endfor %}
  |        ^^^^
